--- a/styles.css
+++ b/styles.css
@@ -16,7 +16,7 @@ body {
     width: 100vw;
     height: 100vh;
     display: grid;
-    grid-template-rows: 0.8fr 4fr;
+    grid-template-rows: 0.6fr 4fr;
     grid-template-columns: 5rem 1fr 1fr 1fr;
     grid-template-areas: "drawer nav nav nav"
                         "drawer cont cont cont";
@@ -100,6 +100,8 @@ body {
     background-color: var(--bg-secondary);
     padding: 1.5rem 3rem;
     border-bottom: 2px solid rgb(103, 102, 102);
+    position: sticky;
+    top: 0;
 }
 
 .topNav {
@@ -123,8 +125,8 @@ body {
     outline-color: blue;
     margin-left: 1.2rem;
     border-radius: 5px;
-    width: min(80%, 600px);
-    margin-right: 200px;
+    width: min(40%, 600px);
+    margin-right: 20px;
 }
 
 .navbar .account {
@@ -140,7 +142,7 @@ body {
     border-radius: 50%;
 }
 
-.account >.github-image {
+.account .github-image {
     margin: 0 1rem 0 2.5rem;
     height: 40px;
     width: 40px;
@@ -150,7 +152,7 @@ img {
     cursor: pointer;
 }
 
-.navBottom {
+.bottomNav {
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -163,8 +165,8 @@ img {
 }
 
 .profile .github-image {
-    width: 25px;
-    height: 25px;
+    width: 75px;
+    height: 75px;
 }
 
 .greeting {
@@ -208,4 +210,38 @@ img {
                         "projects trending";
     overflow: auto;
     height: 100%;
+}
+
+.content h3 {
+    margin-bottom: 0.8rem;
+}
+
+.projects {
+    grid-area: projects;
+}
+
+.projects .cards {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    grid-auto-rows: 250px;
+    gap: 2rem;
+    padding-bottom: 2rem;
+}
+
+.projects .card {
+    background-color: var(--bg-secondary);
+    border: 1px solid gray;
+    border-radius: 10px;
+    border-left: 10px solid rgb(212, 139, 3);
+    display: flex;
+    flex-direction: column;
+    
+
+}
+
+.projects .card-title {
+    font-size: 1.5rem;
+    margin-bottom: 0.2rem;
+    margin-top: 0.6rem;
+    font-weight: 500;
 }
