--- a/styles.css
+++ b/styles.css
@@ -244,4 +244,95 @@ img {
     margin-bottom: 0.2rem;
     margin-top: 0.6rem;
     font-weight: 500;
+    padding-left: 5px;
+}
+
+.projects .card-text {
+    display: -webkit-box;
+    -webkit-line-clamp: 5;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    padding-left: 5px;
+}
+
+.projects .icons {
+    margin-top: auto;
+    align-self: flex-end;
+    display: flex;
+    justify-content: flex-end;
+    gap: 1.3rem;
+    align-items: center;
+    padding-bottom: 5px;
+    padding-right: 5px;
+}
+
+.card {
+    background-color: rgba(58, 125, 36, 0.5);
+    padding: 2rem;
+    border-radius: 0.6rem;
+    box-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
+    max-width: 30vw;
+}
+
+.announcements {
+    grid-area: announcements;
+}
+
+.announcement {
+    width: 25ch;
+    padding: 1rem 0;
+}
+
+.announcement h5 {
+    font-size: 0.9rem;
+    margin-bottom: 0.3rem;
+}
+
+.announcement p {
+    font-size: 0.8rem;
+    -webkit-line-clamp: 3;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    
+}
+
+.announcement + .announcement {
+    border-top: 1px solid lightslategray;
+}
+
+.trending {
+    grid-area: trending;
+}
+
+.trending .card {
+    padding: 1.5rem;
+}
+
+.trend {
+    display: flex;
+    align-items: center;
+    gap: 1rem;
+    cursor: pointer;
+}
+
+.trend + .trend {
+    margin-top: 1.5rem;
+}
+
+.trend .account {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: center;
+
+}
+
+.trend .username {
+    font-weight: 500;
+    margin-bottom: 0.1rem;
+}
+
+.trend .github-image {
+    width: 40px;
+    height: 40px;
 }
